[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["GValas <valasg@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1.2"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
